# api_review

./: .gitignore  README.md  pyproject.toml
Cuadernos/: 1. Introduccion a las APIs.ipynb  2. FastAPI.ipynb  2.5 Interfaz Gateway de servidores.ipynb  3. Construccion_API_FastAPI_Copa_Libertadores.ipynb  4. API para un modelo ML.ipynb  Regresion Logistica.ipynb  Transformacion_Columnas.pkl  clase1403_test.ipynb  cuaderno_test.ipynb  generador_proyecto_final.ipynb  mi_cuaderno_test.ipynb
Datos/: Copa_Libertadores_2023_Complete_Goal_Scorers.csv
api_1/: main_1.py
api_def/: main.py
app/: app.py  app2.py  app_2025.py  app_2025_super.py  streamlit-mejorado.py  streamlit_gpt.py
mi_api/: main.py  sanvale.py
